# kouluruoka

./: README.md  oneday.py  oneweek.py  pyproject.toml  ruoka.py  twoweek.py
